<resources>
    <string name="app_name">Some Good News</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="emailpassword_status_fmt">Welcome! %1$s </string>


    <string name="signed_out">Signed Out</string>
    <string name="fake_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et vestibulum justo.
        Proin lacinia feugiat ante in aliquet. Aenean neque ipsum, vestibulum quis diam eget, semper pellentesque odio.
        Mauris pulvinar, orci in sagittis tincidunt, massa augue dignissim purus, eu porttitor magna velit quis dolor.
        Nam porttitor massa ut convallis imperdiet. Phasellus ullamcorper metus enim. Aliquam posuere ante nec odio posuere,
        in placerat risus semper.Nulla ultrices ornare metus, vel vulputate augue auctor vel. Sed dignissim dignissim rutrum.
        Morbi magna ex, rutrum et dolor a, gravida accumsan augue. tur.
    </string>
    <string name="submit_news_msg">To uphold the purpose and ethos behind this application
        please only submit news that have positive vibes. Thank you! - SGN App Team :)
    </string>
    <string name="no_liked">You have no liked articles</string>
    <string name="feedbacktype1">Humans Being Bros</string>
    <string name="feedbacktype2">COVID-19</string>
    <string name="feedbacktype3">Just for laughs</string>
    <string name="feedbacktype4">Aww</string>
    <string name="feedbacktype5">Other</string>
    <string name="submitTitle">New Good News</string>
    <string name="enter_headline">Enter Headline</string>
    <string name="enter_content">Enter Content</string>
    <string name="image_link">Image Link</string>
    <string name="submitNews">Send Good vibes</string>
    <string name="submit_confirm">I confirm this news is wholesome</string>
    <string name="share">Share</string>
    <string name="logoDescr">SGN App Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_to_liked">ADD TO LIKED</string>
    <string name="imgDescr">image provides context to headline</string>
    <string name="your_liked_videos">Your Liked Videos</string>
    <string name="categories">Categories</string>
    <string name="humans_being_bros">Humans being bros</string>
    <string name="aww">Aww</string>
    <string name="covid_19">Covid-19</string>
    <string name="other">Other</string>
</resources>
