<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding16">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitTitle"
            android:textSize="@dimen/text20"
            android:padding="@dimen/padding10"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center">
        </TextView>
        <EditText
            android:id="@+id/etHeadline"
            android:layout_height="wrap_content"
            android:hint="@string/enter_headline"
            android:inputType="textMultiLine"
            android:lines="3"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/padding20"
            android:autofillHints="@string/enter_headline">
        </EditText>
        <EditText
            android:id="@+id/etContent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_content"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:lines="10"
            android:layout_marginTop="@dimen/padding20"
            android:autofillHints="@string/enter_content">
        </EditText>
        <Spinner
            android:id="@+id/category"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/categoriesList"
            android:layout_marginTop="@dimen/padding20">
        </Spinner>
        <EditText
            android:id="@+id/etImgLink"
            android:layout_height="wrap_content"
            android:hint="@string/image_link"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/padding20"
            android:autofillHints="@string/image_link"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_news_msg"
            android:layout_marginTop="@dimen/padding20"/>
        <CheckBox android:id="@+id/cbConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding20"
            android:text="@string/submit_confirm"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <Button
            android:id="@+id/btnSubmitNews"
            android:layout_height="wrap_content"
            android:text="@string/submitNews"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/padding20"
            android:background="@color/colorPrimary">
        </Button>
    </LinearLayout>
</ScrollView>